changed prompt so model responds with more appropriate severity

--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,6 @@ DOCTOR_PROMPT='I want you to act as a virtual doctor. I will describe some facts
 -Symptoms (list of strings)
 -Suggested tests (list of strings) - the attribute name in the JSON should simply be Tests
 -Needs more info (boolean) - the attribute name in the JSON should simply be moreInfo
--Severity (int - 0 for most severe condition, 1 for less severe, 2 for least severe)
+-How immediately the patient needs attention (int - 0 for highest priority, indicating the most life-threatening conditions, 1 for less severe, indicating conditions that are still dire but do not require immediate attention, 2 for least severe, indicating conditions that need immediate attention the least). The attribute name in the JSON should simply be Severity
 
 You should set the needs more info attribute to be true if you think more information is required to determine which tests are needed for the patient, or if you cannot determine any other attribute from the description I provide. Do not output any text besides the JSON'
